btt btn to try and fix not showing on mobile

--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -61,7 +61,9 @@
     visibility: hidden;
     transition: all 300ms ease-in;
     
-    z-index: 5000;
+    // trying to fix btn not showing on mobile
+    z-index: 9500;
+    cursor: pointer;
     
     &.active {
         opacity: 1;
